--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,12 +6,18 @@
   // "compatibility_flags": [
   //   "nodejs_compat"
   // ],
-  "vars": {
-    "CONFIG_URL": "https://raw.githubusercontent.com/Sigmakib2/ads/main/config.json"
-  },
+"vars": {
+  "CONFIG_URL": "https://raw.githubusercontent.com/Sigmakib2/ads/main/config.json",
+  "ALLOWED_ORIGIN": "https://www.pathgriho.com",
+  "CLICK_TOKEN_SECRET": "REPLACE_WITH_A_LONG_RANDOM_SECRET",
+  "CONFIG_CACHE_TTL_SECONDS": "900",
+  "COUNTER_TTL_SECONDS": "3456000",
+  "DATE_TIMEZONE": "Asia/Dhaka"
+},
+
   "kv_namespaces": [
     {
-      "binding": "pathgriho-ads",
+      "binding": "KV",
       "id": "61ce27619b2741d1bd52567e887eb10e"
     }
   ],
