--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,7 +10,7 @@
   "CONFIG_URL": "https://raw.githubusercontent.com/Sigmakib2/ads/main/config.json",
   "ALLOWED_ORIGIN": "https://www.pathgriho.com",
   "CLICK_TOKEN_SECRET": "REPLACE_WITH_A_LONG_RANDOM_SECRET",
-  "CONFIG_CACHE_TTL_SECONDS": "900",
+  "CONFIG_CACHE_TTL_SECONDS": "900*****",
   "COUNTER_TTL_SECONDS": "3456000",
   "DATE_TIMEZONE": "Asia/Dhaka"
 },
@@ -18,7 +18,7 @@
   "kv_namespaces": [
     {
       "binding": "KV",
-      "id": "61ce27619b2741d1bd52567e887eb10e"
+      "id": "61c****7e887eb10e"
     }
   ],
   // "r2_buckets": [
