--- a/config.json
+++ b/config.json
@@ -38,7 +38,7 @@
       "id": "fancy_02",
       "ownerId": "fancy",
       "title": "CAR",
-      "targetUrl": "https://fancykeebs.com/products/kz-edx-lite-the-super-linear-dynamic-driver-iem",
+      "targetUrl": "https://fancywheelsbd.com/",
       "image": {
         "desktop": "https://img.pathgriho.com/ads/fwd1.jpeg",
         "mobile": "https://img.pathgriho.com/ads/fwm1.jpeg"
